--- a/My Profile page/style.css
+++ b/My Profile page/style.css
@@ -3,8 +3,8 @@ body {
   background-color: #cdd2d4;
   display: flex;
   justify-content: center;
-  align-items: center; /* This vertically centers .container */
-  min-height: 100vh;   /* Full viewport height */
+  align-items: center;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
 }
